--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Studing JS Back-End Course</h1>
-    <script src="changeElementsinArray.js"></script>
+    <script src="getIndexinArray.js"></script>
 </body>
 
 
