--- a/InterectiveMenu/main.html
+++ b/InterectiveMenu/main.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Interective menu</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 
 <body>
+
     <div id="menu">
         <button class="c-hamburger c-hamburger-line">
             <Span>Menu</Span>
@@ -21,6 +24,8 @@
             <h1>Hello</h1>
         </main>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 
